--- a/GetProcHandle/GetProcHandleClient/GetProcHandleClient.csproj
+++ b/GetProcHandle/GetProcHandleClient/GetProcHandleClient.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Interop\Win32Consts.cs" />
     <Compile Include="Interop\Win32Enums.cs" />
     <Compile Include="Interop\Win32Structs.cs" />
-    <Compile Include="Library\Header.cs" />
+    <Compile Include="Library\Globals.cs" />
     <Compile Include="Library\Modules.cs" />
     <Compile Include="Library\Utilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
