--- a/GetProcHandle/GetProcHandleDrv/GetProcHandleDrv.vcxproj
+++ b/GetProcHandle/GetProcHandleDrv/GetProcHandleDrv.vcxproj
@@ -68,18 +68,22 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
     <OutDir>$(SolutionDir)bin\$(ConfigurationName)\</OutDir>
+    <TargetName>$(TargetName.Replace(' ',''))_$(Platform)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
     <OutDir>$(SolutionDir)bin\$(ConfigurationName)\</OutDir>
+    <TargetName>$(TargetName.Replace(' ',''))_$(Platform)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
     <OutDir>$(SolutionDir)bin\$(ConfigurationName)\</OutDir>
+    <TargetName>$(TargetName.Replace(' ',''))_$(Platform)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
     <OutDir>$(SolutionDir)bin\$(ConfigurationName)\</OutDir>
+    <TargetName>$(TargetName.Replace(' ',''))_$(Platform)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <DriverSign>
