--- a/GetFullPrivs/GetFullPrivsClient/GetFullPrivsClient.csproj
+++ b/GetFullPrivs/GetFullPrivsClient/GetFullPrivsClient.csproj
@@ -45,12 +45,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GetFullPrivsClient.cs" />
+    <Compile Include="Handler\CommandLineParser.cs" />
+    <Compile Include="Handler\Execute.cs" />
     <Compile Include="Interop\NativeMethods.cs" />
     <Compile Include="Interop\Win32Consts.cs" />
     <Compile Include="Interop\Win32Enums.cs" />
     <Compile Include="Interop\Win32Structs.cs" />
     <Compile Include="Library\Globals.cs" />
     <Compile Include="Library\Modules.cs" />
+    <Compile Include="Library\Utilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
