--- a/ProcProtect/ProcProtectClient/ProcProtectClient.csproj
+++ b/ProcProtect/ProcProtectClient/ProcProtectClient.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Handler\CommandLineParser.cs" />
+    <Compile Include="Handler\Execute.cs" />
     <Compile Include="Interop\Win32Consts.cs" />
     <Compile Include="Interop\NativeMethods.cs" />
     <Compile Include="Interop\Win32Enums.cs" />
